--- a/conf/cmi/migrate_plus.migration.import_blogs_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_blogs_en.yml
@@ -1,4 +1,4 @@
-uuid: 6a2ef647-8ca8-4a1a-b5c9-7d932cb84b38
+uuid: d18f97b6-7fa4-4418-8dce-77c4114f8e65
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: 9hXAzSR_Nl667mfYmO-oTtyqbBRUvCvH085kkVHrsOg
+  default_config_hash: 2hYjqn5V4M02hgVJN8PxBT470IYWYXss6SEZdz382UM
 id: import_blogs_en
 class: null
 field_plugin_method: null
@@ -118,7 +118,6 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -126,7 +125,7 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
