--- a/conf/cmi/migrate_plus.migration.import_blogs_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_blogs_fi.yml
@@ -1,4 +1,4 @@
-uuid: 65b20afb-07fc-444b-8254-1b80290812ad
+uuid: 9e5c2c71-d9dc-4b8d-a2d6-e81befdd1d57
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: vuzJ_dRrEfHeAOa8W2xZnFW1iEdOgl5O_uwX-3PmdIA
+  default_config_hash: C1WaYL9WSkE_CIax0fKj5cO6zTTBSMBfDyQtSJnG0Vw
 id: import_blogs_fi
 class: null
 field_plugin_method: null
@@ -116,7 +116,6 @@ process:
     plugin: default_value
     default_value: true
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -124,7 +123,7 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
