--- a/conf/cmi/migrate_plus.migration.import_blogs_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_blogs_sv.yml
@@ -1,4 +1,4 @@
-uuid: 3f656a41-a642-402f-a7fc-f70ebd0ddf67
+uuid: 2953b6f0-07e3-4b91-8451-cf7d64dcaf99
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: ZaAmwEz4o_OJvmVcmKPqQlA-FXjNoOTe-uRIe-gAxDI
+  default_config_hash: i24XR9_zrIUd9Yp_4z-SvdttkeTSTnmV3cqkuIbcYO4
 id: import_blogs_sv
 class: null
 field_plugin_method: null
@@ -118,7 +118,6 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -126,7 +125,7 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
