--- a/conf/cmi/migrate_plus.migration.import_landing_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_landing_en.yml
@@ -1,4 +1,4 @@
-uuid: cb694c8e-2543-41f9-91b3-1060ec71678f
+uuid: 6a0754a8-69c2-478a-8de4-a50bd39ac367
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: vhyhwmV9iWh--yv3MeeblqgsHmd-vGd72Ng06z3oZ1s
+  default_config_hash: nJXJm100ZNJxtQPUuoC1IxP9mVqJ6ytGwME-a8OfZPY
 id: import_landing_en
 class: null
 field_plugin_method: null
@@ -114,14 +114,13 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
