--- a/conf/cmi/migrate_plus.migration.import_landing_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_landing_fi.yml
@@ -1,4 +1,4 @@
-uuid: 6fac8396-89d7-4ddd-930e-ed5b20012feb
+uuid: 419f769d-2acc-4c62-96a4-ccceacaf7880
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: hv6czt91-gekagB9tgb7u_k_xDMhMSNd7tBhVmmTnCk
+  default_config_hash: LkQx4mweBGU8bDemgxynMVNtKK2wg_uGRqSIGiRiOjk
 id: import_landing_fi
 class: null
 field_plugin_method: null
@@ -112,14 +112,13 @@ process:
     plugin: default_value
     default_value: true
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
