--- a/conf/cmi/migrate_plus.migration.import_landing_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_landing_sv.yml
@@ -1,4 +1,4 @@
-uuid: 223e6806-2bdb-4da5-9735-6b183d02f3cf
+uuid: 57ad75db-744d-409f-8860-5c48c07cdf39
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: FBCGLYMdoLn3Hk5gEYl_obTkftgLXHhXzcmFW4zv9EM
+  default_config_hash: uXJ6bstMA3sAXp0hY1uySWkQbXVyyB4k6LaAxC4YAk0
 id: import_landing_sv
 class: null
 field_plugin_method: null
@@ -114,14 +114,13 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
