--- a/conf/cmi/migrate_plus.migration.import_news_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_news_en.yml
@@ -1,4 +1,4 @@
-uuid: c677cb90-cbcc-468d-af15-c1ef29d6e8ab
+uuid: f808b3d0-d89b-467f-be0c-d707633fb3ad
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: Aj2y2v34XH5AwPe_Thgo94id1mU-yQTdHm0hK7TOPYQ
+  default_config_hash: E4vJdJ1kLnljPVR8IjnYQGv7RcT2gy91ujwrWk1rOos
 id: import_news_en
 class: null
 field_plugin_method: null
@@ -118,7 +118,6 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -126,7 +125,7 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
