--- a/conf/cmi/migrate_plus.migration.import_news_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_news_fi.yml
@@ -1,4 +1,4 @@
-uuid: e3da5d49-2143-48cd-b4b9-22a4d8ba237c
+uuid: 8931ee3f-e374-4471-96db-fb3b23fe3bf5
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: zZxnkVsQGmo5l_LxB8cWKZRAbouda-JQJKBOGNjUAxk
+  default_config_hash: fot_BpQijgPZJDlNLeVsjhWZkCyxyhdepOJm4jpeq7A
 id: import_news_fi
 class: null
 field_plugin_method: null
@@ -116,7 +116,6 @@ process:
     plugin: default_value
     default_value: true
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -124,7 +123,7 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
