--- a/conf/cmi/migrate_plus.migration.import_news_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_news_sv.yml
@@ -1,4 +1,4 @@
-uuid: 1cb53269-8186-4d0a-a516-b2c4b6680a63
+uuid: 052df609-eec7-465f-96d8-e789671ada12
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: 1NShGbrkyOwxoLXPyx3yPEuBld1ngTX0Qasbva9c0u4
+  default_config_hash: DvBtpMxBNrUF9u4NSBvJAdMGaB3qd4GTHSY1MdO6BMk
 id: import_news_sv
 class: null
 field_plugin_method: null
@@ -118,7 +118,6 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
@@ -126,7 +125,7 @@ process:
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
