--- a/conf/cmi/migrate_plus.migration.import_pages_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_pages_en.yml
@@ -1,4 +1,4 @@
-uuid: 2f846057-90c4-40a4-a98a-85dd9d2161cc
+uuid: 226b1ee4-5d8f-4d2e-9bc1-c2a7b6baca03
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: Sm2QtFkeicgbxSOAQeh1X25qQTUCwO2gOi3h9VsyxFY
+  default_config_hash: eKFZfUD6AYlZ80JFTr7ni84evKYMvHGx7KCMFWU_zXM
 id: import_pages_en
 class: null
 field_plugin_method: null
@@ -114,14 +114,13 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
