--- a/conf/cmi/migrate_plus.migration.import_pages_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_pages_fi.yml
@@ -1,4 +1,4 @@
-uuid: 69d571ff-dc2e-4ec1-9f59-9e5c44224430
+uuid: 477850ac-bdad-413d-a557-ed173ce8b78f
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: zdFB9j60UiIiCXBeqlE9DP3MtD_iVEah6Gq7sG2UA9s
+  default_config_hash: 197aZEvN_l27aeAu74cLCxHPWbzk7iW8KEVdrI-yZFE
 id: import_pages_fi
 class: null
 field_plugin_method: null
@@ -112,14 +112,13 @@ process:
     plugin: default_value
     default_value: true
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
