--- a/conf/cmi/migrate_plus.migration.import_pages_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_pages_sv.yml
@@ -1,4 +1,4 @@
-uuid: 3297d5b7-dc17-4771-9c23-b57a98a8695e
+uuid: 2f464611-d452-4019-af84-f75a428d1bb4
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: Dwg_09lbl5Pr-ADMwFOWjMxiafNCQKUru17zxYoGFCI
+  default_config_hash: FpjXDbD4wkf2hL4C0y2lsHPvJH6afjgXtDJbRUbv5Po
 id: import_pages_sv
 class: null
 field_plugin_method: null
@@ -114,14 +114,13 @@ process:
   promote: promote
   langcode: langcode
   path/alias: path/alias
-  path/pid: path/pid
   path/langcode: path/langcode
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
   uid:
     plugin: default_value
     default_value: 1
-  field_page_width/target_id:
+  field_page_width:
     plugin: entity_lookup
     source: field_page_width/data/id
     value_key: uuid
