--- a/conf/cmi/migrate_plus.migration.import_paragraph_blog_list_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_blog_list_en.yml
@@ -1,4 +1,4 @@
-uuid: 23c0a5b9-8bac-435d-844d-bdac041b7968
+uuid: b23ce199-89ef-440d-9564-41227ba66362
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: PEBx5GkhTPar5MWMyiIft7HX1fLfje_duymtcc2q4EE
+  default_config_hash: 6ge8hCrG46zYtMi22fx1OgCDpD-ATm6wMVGsg-i0LIw
 id: import_paragraph_blog_list_en
 class: null
 field_plugin_method: null
@@ -139,14 +139,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
   translations: true
