--- a/conf/cmi/migrate_plus.migration.import_paragraph_blog_list_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_blog_list_fi.yml
@@ -1,4 +1,4 @@
-uuid: 2a60d2a1-3437-4bc1-a720-51f9217aa691
+uuid: bfcc9c3b-cc76-4bd8-943f-2cc0ff6da2c5
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: Z5ImQEo-KE25oBcqA6UiUvh0IddXaaBi4HaLvq_kzLY
+  default_config_hash: FBfqSGmNK3f4FRrOLm2J03BjTj_i5l14n4nDT9N0uDg
 id: import_paragraph_blog_list_fi
 class: null
 field_plugin_method: null
@@ -129,14 +129,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
