--- a/conf/cmi/migrate_plus.migration.import_paragraph_card_list_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_card_list_sv.yml
@@ -1,4 +1,4 @@
-uuid: 8ace397d-974f-4f07-aaf7-27e0bb4a678e
+uuid: 240e8392-77ea-4526-bded-bfe20584c7ab
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: IU8NpKnfjug8CDpOUBf6nkA04z2coXzTAEE6QN3tak8
+  default_config_hash: Ov8dt_nd62NcEIZA1zs3SNe17CPSk4vs-7yYbaeM5yM
 id: import_paragraph_card_list_sv
 class: null
 field_plugin_method: null
@@ -135,15 +135,14 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+  field_card_list_bg_color:
+    plugin: entity_lookup
+    source: field_card_list_bg_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
   field_cards:
     plugin: sub_process
     source: field_cards/data
