--- a/conf/cmi/migrate_plus.migration.import_paragraph_events_list_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_events_list_fi.yml
@@ -1,4 +1,4 @@
-uuid: 8f2a012f-bf7b-43ab-81ee-f9469e60e00e
+uuid: 9ec9d691-d326-4890-9256-d3df0743cd52
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: h7JyPQKTfpRlQEP-YSUltwZlSwkLqCTzIgkPsoT3EAg
+  default_config_hash: bUiblxZB-bO_FmfDskZ86zWVlL5hjRus52d4_KvYmDU
 id: import_paragraph_events_list_fi
 class: null
 field_plugin_method: null
@@ -129,14 +129,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
