--- a/conf/cmi/migrate_plus.migration.import_paragraph_events_list_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_events_list_sv.yml
@@ -1,4 +1,4 @@
-uuid: 95af7d37-bfa2-4373-a14d-34ddadf367f2
+uuid: e771a487-140d-45af-8e96-3ac7f3c8d0a8
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: wdgKhJeM5jqCKWiFaGjFgJr5hDBN1eZp-0lVyhyIXFU
+  default_config_hash: D35KvrUuXxHLpRa_CHSt1fqwYCb-GKtZaP7DQP4tEP4
 id: import_paragraph_events_list_sv
 class: null
 field_plugin_method: null
@@ -139,14 +139,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
   translations: true
