--- a/conf/cmi/migrate_plus.migration.import_paragraph_image_and_card_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_image_and_card_fi.yml
@@ -1,4 +1,4 @@
-uuid: 2db4611a-89f1-4823-a470-bc89f54074d8
+uuid: 4d9435cd-e54d-429b-8994-79c5b484be2d
 langcode: en
 status: true
 dependencies:
@@ -6,21 +6,20 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: AxUBtdZVTzrAhNVsfyx_0L9M8jbC-mEsk7q9DIJLr8g
-id: import_paragraph_image_fi
+  default_config_hash: vFB9bfYZLbWNeECZ9RgrAT1b_PGJhSt50JXGClA9KHM
+id: import_paragraph_image_and_card_fi
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Image fi paragraph'
+label: 'Import Image and card fi paragraph'
 source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/image?filter[langcode]=fi'
+  urls: 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/image_and_card?filter[langcode]=fi'
   item_selector: data/
   fields:
     -
@@ -80,24 +79,20 @@ source:
       label: uid
       selector: /relationships/uid
     -
-      name: field_caption
-      label: Caption
-      selector: /attributes/field_caption
+      name: field_ic_card
+      label: Card
+      selector: /relationships/field_ic_card
     -
-      name: field_image_height
-      label: Height
-      selector: /attributes/field_image_height
-    -
-      name: field_image_image
+      name: field_ic_image
       label: Image
-      selector: /relationships/field_image_image
+      selector: /relationships/field_ic_image
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: image
+    default_value: image_and_card
   id: id
   uuid: uuid
   revision_id: revision_id
@@ -121,17 +116,28 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_image_image:
+  field_ic_card:
+    plugin: sub_process
+    source: field_ic_card/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: card
+        bundle_key: type
+        entity_type: paragraph
+        ignore_case: true
+      target_revision_id: meta/target_revision_id
+  field_ic_image:
     target_id:
       plugin: entity_lookup
-      source: field_image_image/data/id
+      source: field_ic_image/data/id
       value_key: uuid
       bundle: image
       bundle_key: bundle
       entity_type: media
       ignore_case: true
-  field_caption: field_caption
-  field_image_height: field_image_height
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
