--- a/conf/cmi/migrate_plus.migration.import_paragraph_image_and_card_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_image_and_card_sv.yml
@@ -1,4 +1,4 @@
-uuid: 2db4611a-89f1-4823-a470-bc89f54074d8
+uuid: 9af8a08d-9968-4581-a82c-314121f91abd
 langcode: en
 status: true
 dependencies:
@@ -6,21 +6,21 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: AxUBtdZVTzrAhNVsfyx_0L9M8jbC-mEsk7q9DIJLr8g
-id: import_paragraph_image_fi
+  default_config_hash: pBRmvbPZDuW0SJtJX9i5uW-x8VBl0Y5wlXZHsKUM-f0
+id: import_paragraph_image_and_card_sv
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: tyollisyyspalvelut
-label: 'Import Image fi paragraph'
+label: 'Import Image and card sv paragraph'
 source:
+  translations: true
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: json
   track_changes: true
-  urls:
-    - 'https://edit.tyollisyyspalvelut.hel.fi/fi/apijson/paragraph/image?filter[langcode]=fi'
+  urls: 'https://edit.tyollisyyspalvelut.hel.fi/sv/apijson/paragraph/image_and_card?filter[langcode]=sv'
   item_selector: data/
   fields:
     -
@@ -80,27 +80,35 @@ source:
       label: uid
       selector: /relationships/uid
     -
-      name: field_caption
-      label: Caption
-      selector: /attributes/field_caption
+      name: field_ic_card
+      label: Card
+      selector: /relationships/field_ic_card
     -
-      name: field_image_height
-      label: Height
-      selector: /attributes/field_image_height
-    -
-      name: field_image_image
+      name: field_ic_image
       label: Image
-      selector: /relationships/field_image_image
+      selector: /relationships/field_ic_image
   ids:
     id:
       type: integer
 process:
   type:
     plugin: default_value
-    default_value: image
-  id: id
+    default_value: image_and_card
+  pseudo_paragraph_field:
+    plugin: migration_lookup
+    migration: import_paragraph_image_and_card_fi
+    source: id
+  id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '0'
+  revision_id:
+    plugin: extract
+    source: '@pseudo_paragraph_field'
+    index:
+      - '1'
   uuid: uuid
-  revision_id: revision_id
   created:
     -
       plugin: format_date
@@ -109,9 +117,6 @@ process:
       source: created
   status: status
   langcode: langcode
-  default_langcode:
-    plugin: default_value
-    default_value: true
   uid:
     plugin: default_value
     default_value: 1
@@ -121,17 +126,31 @@ process:
   revision_translation_affected: revision_translation_affected
   content_translation_source: content_translation_source
   content_translation_outdated: content_translation_outdated
-  field_image_image:
+  field_ic_card:
+    plugin: sub_process
+    source: field_ic_card/data
+    process:
+      target_id:
+        plugin: entity_lookup
+        source: id
+        value_key: uuid
+        bundle: card
+        bundle_key: type
+        entity_type: paragraph
+        ignore_case: true
+      target_revision_id: meta/target_revision_id
+  field_ic_image:
     target_id:
       plugin: entity_lookup
-      source: field_image_image/data/id
+      source: field_ic_image/data/id
       value_key: uuid
       bundle: image
       bundle_key: bundle
       entity_type: media
       ignore_case: true
-  field_caption: field_caption
-  field_image_height: field_image_height
 destination:
   plugin: 'entity_reference_revisions:paragraph'
-migration_dependencies: {  }
+  translations: true
+migration_dependencies:
+  required:
+    - import_paragraph_image_and_card_fi
