--- a/conf/cmi/migrate_plus.migration.import_paragraph_mainheading_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_mainheading_sv.yml
@@ -1,4 +1,4 @@
-uuid: 0f795aca-e262-4021-8c36-b24091119854
+uuid: 8409bd0f-2db4-4879-bb39-49563d194b32
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: 8e3rVbxLbnIOsx3RcF3levQsSnHCmbS1bkQFk6TC3l4
+  default_config_hash: Vnmbpy63Iq_PZVHK2mAoBNDe1ctFCroasAfJpb9xTSk
 id: import_paragraph_mainheading_sv
 class: null
 field_plugin_method: null
@@ -133,17 +133,8 @@ process:
   field_show_date: field_show_date
   field_title: field_title
   field_title_color:
-    plugin: sub_process
-    source: field_title_color/data
-    process:
-      target_id:
-        plugin: entity_lookup
-        source: id
-        value_key: uuid
-        bundle: colors
-        bundle_key: vid
-        entity_type: taxonomy_term
-        ignore_case: true
+    plugin: default_value
+    default_value: 65
 destination:
   plugin: 'entity_reference_revisions:paragraph'
   translations: true
