--- a/conf/cmi/migrate_plus.migration.import_paragraph_news_list_en.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_news_list_en.yml
@@ -1,4 +1,4 @@
-uuid: 49560563-ae9b-4c23-aa8a-4e1a17255135
+uuid: 300e9770-11bc-4938-b7fe-cf3e82937466
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: 1bbg0BpVyzJMDPGmO2xogN-8Qfl-JoTGZdIu7awUGP4
+  default_config_hash: Vq5wD9kDbx3F-s-PH2lAgPXoVy77yT8XsfCoTHvSqQY
 id: import_paragraph_news_list_en
 class: null
 field_plugin_method: null
@@ -139,14 +139,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
   translations: true
