--- a/conf/cmi/migrate_plus.migration.import_paragraph_news_list_fi.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_news_list_fi.yml
@@ -1,4 +1,4 @@
-uuid: 863d86e5-6348-4a97-ae93-c2109a43d27b
+uuid: 3f8d6a37-7f28-41d5-a522-25c492929076
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: O1DIUZCvMKNutA0HQXh9OkkUqsIjZ0u2iJouGTT9ZxQ
+  default_config_hash: 7hR8fy1JhuGzU1CVdMBN2EmmFktSWZSr0uFwSYUOZ6A
 id: import_paragraph_news_list_fi
 class: null
 field_plugin_method: null
@@ -129,14 +129,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
 migration_dependencies: {  }
