--- a/conf/cmi/migrate_plus.migration.import_paragraph_news_list_sv.yml
+++ b/conf/cmi/migrate_plus.migration.import_paragraph_news_list_sv.yml
@@ -1,4 +1,4 @@
-uuid: 11837e0c-cb5e-49c7-b887-364b490e5d5e
+uuid: 8b85d8b8-b3d2-40f1-93fa-4d5c92e4cbd4
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - tyollisyyspalvelut_migrate
 _core:
-  default_config_hash: H3jD3gGmaPpJT5VqKKfWMKh3ViLFzissa85JayopKSk
+  default_config_hash: TS8F_lUxgOrF8yK5MtJgvwOKh_rbcI8ZQokul0z2ATk
 id: import_paragraph_news_list_sv
 class: null
 field_plugin_method: null
@@ -139,14 +139,13 @@ process:
   field_short_list: field_short_list
   field_title: field_title
   field_background_color:
-    target_id:
-      plugin: entity_lookup
-      source: id
-      value_key: uuid
-      bundle: colors
-      bundle_key: vid
-      entity_type: taxonomy_term
-      ignore_case: true
+    plugin: entity_lookup
+    source: field_background_color/data/id
+    value_key: uuid
+    bundle: colors
+    bundle_key: vid
+    entity_type: taxonomy_term
+    ignore_case: true
 destination:
   plugin: 'entity_reference_revisions:paragraph'
   translations: true
