--- a/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_mainheading_en.yml
+++ b/public/modules/custom/tyollisyyspalvelut_migrate/config/install/migrate_plus.migration.import_paragraph_mainheading_en.yml
@@ -147,10 +147,5 @@ process:
   field_show_date: field_show_date
   field_title: field_title
   field_title_color:
-    plugin: entity_lookup
-    source: field_title_color/data/id
-    value_key: uuid
-    bundle: colors
-    bundle_key: vid
-    entity_type: taxonomy_term
-    ignore_case: true
+    plugin: default_value
+    default_value: 65
