--- a/conf/cmi/core.entity_view_display.node.landing.default.yml
+++ b/conf/cmi/core.entity_view_display.node.landing.default.yml
@@ -7,34 +7,18 @@ dependencies:
     - field.field.node.landing.field_page_width
     - node.type.landing
   module:
-    - entity_reference_revisions
     - user
 id: node.landing.default
 targetEntityType: node
 bundle: landing
 mode: default
 content:
-  field_page_content:
-    weight: 2
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
-    region: content
-  field_page_width:
-    weight: 1
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   links:
     weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_page_content: true
+  field_page_width: true
   langcode: true
