--- a/conf/cmi/core.entity_view_display.node.news.default.yml
+++ b/conf/cmi/core.entity_view_display.node.news.default.yml
@@ -8,41 +8,19 @@ dependencies:
     - field.field.node.news.field_summary
     - node.type.news
   module:
-    - entity_reference_revisions
     - user
 id: node.news.default
 targetEntityType: node
 bundle: news
 mode: default
 content:
-  field_page_content:
-    weight: 101
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
-    region: content
-  field_page_width:
-    weight: 102
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_summary:
-    weight: 103
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
   links:
-    weight: 100
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
+  field_page_content: true
+  field_page_width: true
+  field_summary: true
   langcode: true
