--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -28,16 +28,17 @@ permissions:
   - 'administer languages'
   - 'administer media'
   - 'administer menu'
+  - 'administer nodes'
   - 'administer paragraph form display'
   - 'administer paragraphs settings'
   - 'administer paragraphs types'
   - 'administer pathauto'
-  - 'administer search'
   - 'administer taxonomy'
   - 'administer taxonomy_term display'
   - 'administer taxonomy_term form display'
   - 'administer url aliases'
   - 'administer views'
+  - 'bypass node access'
   - 'cancel account'
   - 'create audio media'
   - 'create blog content'
