Add quick node clone module.

--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -40,6 +40,9 @@ permissions:
   - 'administer views'
   - 'bypass node access'
   - 'cancel account'
+  - 'clone blog content'
+  - 'clone news content'
+  - 'clone page content'
   - 'create audio media'
   - 'create blog content'
   - 'create content translations'
