--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_tools": "^5.0",
         "drupal/paragraphs_features": "^1.11",
+        "drupal/quick_node_clone": "^1.14",
         "drush/drush": "^10.4"
     },
     "require-dev": {
