--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -54,6 +54,7 @@ module:
   paragraphs_type_permissions: 0
   path: 0
   path_alias: 0
+  quick_node_clone: 0
   quickedit: 0
   rdf: 0
   responsive_image: 0
