--- a/conf/cmi/core.entity_form_display.node.event.default.yml
+++ b/conf/cmi/core.entity_form_display.node.event.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.event.field_end_time
+    - field.field.node.event.field_external_links
     - field.field.node.event.field_id
     - field.field.node.event.field_image_alt
     - field.field.node.event.field_image_name
@@ -12,6 +13,7 @@ dependencies:
     - field.field.node.event.field_info_url
     - field.field.node.event.field_last_modified_time
     - field.field.node.event.field_location
+    - field.field.node.event.field_location_extra_info
     - field.field.node.event.field_page_content
     - field.field.node.event.field_page_width
     - field.field.node.event.field_publisher
@@ -22,7 +24,7 @@ dependencies:
     - field.field.node.event.field_title
     - node.type.event
   module:
-    - paragraphs
+    - link
     - path
     - text
 id: node.event.default
@@ -32,20 +34,28 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_end_time:
-    weight: 131
+    weight: 18
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_external_links:
+    weight: 26
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_id:
-    weight: 123
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -53,7 +63,7 @@ content:
     type: string_textfield
     region: content
   field_image_alt:
-    weight: 137
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -61,7 +71,7 @@ content:
     type: string_textfield
     region: content
   field_image_name:
-    weight: 127
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -69,7 +79,7 @@ content:
     type: string_textfield
     region: content
   field_image_url:
-    weight: 128
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -77,7 +87,7 @@ content:
     type: string_textfield
     region: content
   field_in_language:
-    weight: 129
+    weight: 16
     settings:
       size: 60
       placeholder: ''
@@ -85,7 +95,7 @@ content:
     type: string_textfield
     region: content
   field_info_url:
-    weight: 136
+    weight: 24
     settings:
       size: 60
       placeholder: ''
@@ -93,7 +103,7 @@ content:
     type: string_textfield
     region: content
   field_last_modified_time:
-    weight: 132
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -101,33 +111,23 @@ content:
     type: string_textfield
     region: content
   field_location:
-    weight: 133
+    weight: 20
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_page_content:
-    weight: 122
+  field_location_extra_info:
+    weight: 21
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-      features:
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: paragraphs
+    type: string_textfield
     region: content
   field_page_width:
-    weight: 121
+    weight: 8
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -137,7 +137,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_publisher:
-    weight: 134
+    weight: 22
     settings:
       size: 60
       placeholder: ''
@@ -145,7 +145,7 @@ content:
     type: string_textfield
     region: content
   field_short_description:
-    weight: 126
+    weight: 12
     settings:
       rows: 5
       placeholder: ''
@@ -153,7 +153,7 @@ content:
     type: text_textarea
     region: content
   field_start_time:
-    weight: 130
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -161,13 +161,13 @@ content:
     type: string_textfield
     region: content
   field_tags:
-    weight: 135
+    weight: 23
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_text:
-    weight: 124
+    weight: 10
     settings:
       rows: 5
       placeholder: ''
@@ -175,7 +175,7 @@ content:
     type: text_textarea
     region: content
   field_title:
-    weight: 125
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -184,14 +184,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -199,26 +199,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 4
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 7
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -226,7 +226,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -234,4 +234,5 @@ content:
       match_limit: 10
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_page_content: true
