--- a/conf/cmi/core.entity_view_display.node.event.default.yml
+++ b/conf/cmi/core.entity_view_display.node.event.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.event.field_end_time
+    - field.field.node.event.field_external_links
     - field.field.node.event.field_id
     - field.field.node.event.field_image_alt
     - field.field.node.event.field_image_name
@@ -12,6 +13,7 @@ dependencies:
     - field.field.node.event.field_info_url
     - field.field.node.event.field_last_modified_time
     - field.field.node.event.field_location
+    - field.field.node.event.field_location_extra_info
     - field.field.node.event.field_page_content
     - field.field.node.event.field_page_width
     - field.field.node.event.field_publisher
@@ -22,12 +24,33 @@ dependencies:
     - field.field.node.event.field_title
     - node.type.event
   module:
+    - link
     - user
 id: node.event.default
 targetEntityType: node
 bundle: event
 mode: default
 content:
+  field_external_links:
+    weight: 3
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
+  field_location_extra_info:
+    weight: 2
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_title:
     weight: 1
     label: hidden
