--- a/conf/cmi/field.field.node.event.field_title.yml
+++ b/conf/cmi/field.field.node.event.field_title.yml
@@ -9,7 +9,7 @@ id: node.event.field_title
 field_name: field_title
 entity_type: node
 bundle: event
-label: title
+label: Title
 description: ''
 required: false
 translatable: false
