--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -14,6 +14,8 @@ module:
   ckeditor: 0
   comment: 0
   config: 0
+  config_filter: 0
+  config_ignore: 0
   config_rewrite: 0
   config_translation: 0
   config_update: 0
